# zope.component

./: .bzrignore  .coveragerc  .gitignore  .meta.toml  .pre-commit-config.yaml  .travis.yml  CHANGES.rst  CHANGES.txt  INSTALL.txt  MANIFEST.in  README.rst  README.txt  TODO.txt  bootstrap.py  buildout.cfg  pyproject.toml  rtd.txt  setup.cfg  setup.py  test.py  tox.ini
.github/workflows/: tests.yml
docs/: Makefile  api.rst  conf.py  configure.rst  event.rst  factory.rst  hacking.rst  hooks.rst  index.rst  make.bat  narr.rst  persistentregistry.rst  socketexample.rst  testlayer.rst  zcml.rst
docs/api/: adapter.rst  factory.rst  hooks.rst  interface.rst  interfaces.rst  module.rst  persistent.rst  security.rst  sitemanager.rst  utility.rst
src/zope/component/: DEPENDENCIES.cfg  README.txt  __init__.py  _api.py  _compat.py  _declaration.py  adapter.py  back35.py  configure.txt  configure.zcml  contextdependent.py  event.py  event.txt  eventtesting.py  exceptions.py  factory.py  factory.txt  globalregistry.py  hookable.py  hooks.py  hooks.txt  index.txt  interface.py  interfaces.py  meta.zcml  nexttesting.py  persistentregistry.py  persistentregistry.txt  registry.py  registry.txt  security.py  service.py  servicenames.py  site.py  socketexample.txt  standalonetests.py  testing.py  testlayer.py  testlayer.txt  tests.py  (+4 more)
src/zope/component/bbb/: __init__.py  interfaces.py
src/zope/component/testfiles/: adapter.py  components.py  views.py
src/zope/component/tests/: __init__.py  examples.py  test___init__.py  test__api.py  test__declaration.py  test_event.py  test_factory.py  test_globalregistry.py  test_hookable.py  test_hooks.py  test_interface.py  test_interfaces.py  test_persistentregistry.py  test_registry.py  test_security.py  test_standalone.py  test_zcml.py
